# angular-structure-analyzer

./: Cargo.toml  README.md
src/: analyzer.rs  main.rs  models.rs  utils.rs
src/formatter/: graph.rs  json.rs  mod.rs  text.rs
